--- a/package.json
+++ b/package.json
@@ -3,12 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@material-tailwind/react": "^2.1.2",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.14.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.9.2",
+    "bootstrap": "^5.3.2",
+    "lightbox.js-react": "^0.8.9",
+    "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-lightbox-component": "^1.2.1",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-viewer": "^3.2.2",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
